--- a/README.ipynb
+++ b/README.ipynb
@@ -1,45 +1,50 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World!\n"
-     ]
-    }
+   "cells":[
+      {
+         "metadata":{
+            
+         },
+         "cell_type":"markdown",
+         "source":"# luigidifraia/binder-playground\nClick [here](../lab) to open a JupyterLab tab. Click [here](../notebooks) to open a Classic Notebook tab."
+      },
+      {
+         "metadata":{
+            "trusted":false
+         },
+         "cell_type":"code",
+         "source":"print(\"Hello, World!\")",
+         "execution_count":1,
+         "outputs":[
+            {
+               "name":"stdout",
+               "output_type":"stream",
+               "text":"Hello World!\n"
+            }
+         ]
+      }
    ],
-   "source": [
-    "print(\"Hello, World!\")"
-   ]
-  }
- ],
- "metadata": {
-  "anaconda-cloud": {},
-  "kernelspec": {
-   "display_name": "Python [conda root]",
-   "language": "python",
-   "name": "conda-root-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
+   "metadata":{
+      "anaconda-cloud":{
+         
+      },
+      "kernelspec":{
+         "name":"python3",
+         "display_name":"Python 3",
+         "language":"python"
+      },
+      "language_info":{
+         "name":"python",
+         "version":"3.7.10",
+         "mimetype":"text/x-python",
+         "codemirror_mode":{
+            "name":"ipython",
+            "version":3
+         },
+         "pygments_lexer":"ipython3",
+         "nbconvert_exporter":"python",
+         "file_extension":".py"
+      }
    },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+   "nbformat":4,
+   "nbformat_minor":2
 }
